--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #EEF5CC, #FFD97D);
+}
+.mat-button.mat-accent,
+.mat-icon-button.mat-accent,
+.mat-stroked-button.mat-accent {
+    color: #4FCF88;
+}
