--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -6,9 +6,12 @@
                 <form [formGroup]="todoForm">
                     <mat-form-field appearance="outline">
                         <mat-label>Task Name</mat-label>
-                        <input formControlName="item" matInput placeholder="Placeholder">
-                        <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
+                        <input formControlName="item" matInput>
                         <mat-hint>add task name</mat-hint>
+                    </mat-form-field>
+                    <mat-form-field class="example-full-width" appearance="outline">
+                      <textarea formControlName="itemDescription" matInput></textarea>
+                      <mat-hint>add a description</mat-hint>
                     </mat-form-field>
                     <button *ngIf="!isEditEnable" (click)="addTask()" mat-raised-button [disabled]="todoForm.invalid" color="primary">Add</button>
                     <button *ngIf="isEditEnable" (click)="updateTask()" mat-raised-button [disabled]="todoForm.invalid" color="primary">Update</button>
@@ -29,7 +32,8 @@
                               [cdkDropListData]="tasks"
                               class="example-list"
                               (cdkDropListDropped)="drop($event)">
-                              <div class="example-box" *ngFor="let item of tasks; let i = index" cdkDrag>{{item.description}}
+                              <div class="example-box" *ngFor="let item of tasks; let i = index" cdkDrag>{{item.title}}
+                                {{item.description}}
                                 <div class="box">
                                     <button mat-icon-button color="warn" (click)="deleteTask(i)"><mat-icon>delete</mat-icon></button>
                                     <button mat-icon-button color="primary" (click)="onEdit(item,i)"><mat-icon>edit</mat-icon></button>
