--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, #EEF5CC, #FFD97D);
+    //background: linear-gradient(to bottom, #EEF5CC, #FFD97D);
 }
 .mat-button.mat-accent,
 .mat-icon-button.mat-accent,
