--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -33,7 +33,7 @@
                               class="example-list"
                               (cdkDropListDropped)="drop($event)">
                               <div class="example-box" *ngFor="let item of tasks; let i = index" cdkDrag>{{item.title}}
-                                {{item.description}}
+                                <div class="example-box">{{item.description}}</div>
                                 <div class="box">
                                     <button mat-icon-button color="warn" (click)="deleteTask(i)"><mat-icon>delete</mat-icon></button>
                                     <button mat-icon-button color="primary" (click)="onEdit(item,i)"><mat-icon>edit</mat-icon></button>
@@ -52,7 +52,8 @@
                               [cdkDropListData]="inprogress"
                               class="example-list"
                               (cdkDropListDropped)="drop($event)">
-                              <div class="example-box" *ngFor="let item of inprogress; let i = index" cdkDrag>{{item.description}}
+                              <div class="example-box" *ngFor="let item of inprogress; let i = index" cdkDrag>{{item.title}}
+                                <div class="example-box">{{item.description}}</div>
                                 <button mat-icon-button color="warn" (click)="deleteInProgressTask(i)"><mat-icon>delete</mat-icon></button>
                               </div>
                             </div>
@@ -69,6 +70,7 @@
                               class="example-list"
                               (cdkDropListDropped)="drop($event)">
                               <div class="example-box" *ngFor="let item of done;let i = index" cdkDrag>{{item.description}}
+                                <div class="example-box">{{item.description}}</div>
                                 <div class="box">
                                     <button mat-icon-button color="warn" (click)="deleteDoneTask(i)"><mat-icon>delete</mat-icon></button>
                                     <button mat-icon-button color="accent"><mat-icon>check_circle</mat-icon></button>
