--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -69,7 +69,7 @@
                               [cdkDropListData]="done"
                               class="example-list"
                               (cdkDropListDropped)="drop($event)">
-                              <div class="example-box" *ngFor="let item of done;let i = index" cdkDrag>{{item.description}}
+                              <div class="example-box" *ngFor="let item of done;let i = index" cdkDrag>{{item.title}}
                                 <div class="example-box">{{item.description}}</div>
                                 <div class="box">
                                     <button mat-icon-button color="warn" (click)="deleteDoneTask(i)"><mat-icon>delete</mat-icon></button>
